# invoicing

./: .coveragerc.toml  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: build.yaml  e2e-tests.yaml  integration-tests.yaml  pre-commit.yaml  unit-tests.yaml  validate-institute-list.yaml
k8s/base/: invoice-daily-check.yaml  invoice-processing.yaml  kustomization.yaml
k8s/overlay/: kustomization.yaml  secret-coldfront-api.yaml  secret-gh-nonbillables.yaml
process_report/: config.py  institute_list.yaml  institute_list_models.py  loader.py  process_report.py  settings.py  util.py
process_report/data_tools/: config.py  costs.py
process_report/invoices/: MOCA_group_specific_invoice.py  MOCA_prepaid_invoice.py  NERC_total_invoice.py  billable_invoice.py  bm_invoice.py  bu_internal_invoice.py  iceberg_invoice.py  invoice.py  lenovo_invoice.py  nonbillable_invoice.py  ocp_test_invoice.py  pdf_invoice.py  pi_specific_invoice.py  prepay_credits_snapshot.py
process_report/processors/: add_institution_processor.py  bm_usage_processor.py  bu_subsidy_processor.py  coldfront_fetch_processor.py  discount_processor.py  init_columns_processor.py  lenovo_processor.py  new_pi_credit_processor.py  pi_su_credit_processor.py  prepayment_processor.py  special_billing_rules_processor.py  validate_billable_pi_processor.py  validate_cluster_name_processor.py  validate_input_column_processor.py  validate_pi_alias_processor.py
process_report/tests/: base.py  test-requirements.txt  (+1 more)
tools/: setup_and_process.sh
(+40 files in other folders)
