[project]
name = "nerc-invoicing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nerc-rates>=1.0.1,<2.0.0",
    "pandas>=3.0.0,<4.0.0",
    "pyarrow",
    "pyiceberg[pyarrow]>=0.11.0",
    "boto3>=1.42.6,<2.0",
    "jinja2",
    "validators",
    "python-dateutil",
    "pydantic-settings",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "process_report"
module-root = ""
